manifest/converter-deployment.yml
# converter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: converter-service
  template:
    metadata:
      labels:
        app: converter-service
    spec:
      containers:
        - name: converter-service
          image: akshat315/converter-service:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
