manifest/encryption-deployment.yml
# encryption-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: encryption-service
  namespace: rapid-converter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: encryption-service
  template:
    metadata:
      labels:
        app: encryption-service
    spec:
      containers:
        - name: encryption-service
          image: akshat315/encryption-service:latest
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 20
