manifest/converter-service.yml
# converter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: converter-service
  namespace: rapid-converter
spec:
  selector:
    app: converter-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
