manifest/ingress.yml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rapid-converter-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: converter.rapidconverter.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: converter-service
                port:
                  number: 80
